recursion.lessons.recursion.tree.Tree.scala.error
Tree:12: error: not found: value step
		current(step-1)
                        ^